--- a/Projects/2. Django/1. To Do List/ToDoList_APP/templates/ToDoList_APP/index.html
+++ b/Projects/2. Django/1. To Do List/ToDoList_APP/templates/ToDoList_APP/index.html
@@ -1,3 +1,4 @@
+{% load static %}  <!-- For loading the CSS -->
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -9,8 +10,8 @@
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 
 		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" href="./bs/css/flatly.min.css" />
-		<link rel="stylesheet" href="./styles.css" />		
+		<link rel="stylesheet" href="{% static 'ToDoList_APP\bs\css\flatly.min.css' %}" />  <!-- For loading Bootstrap -->
+		<link rel="stylesheet" href="{% static 'ToDoList_APP\styles.css' %}" />  <!-- For loading CSS -->
 	</head>
 	<body>
 
@@ -59,7 +60,7 @@
 			<footer>
 				<div class="row pad">
 					<div class="col-lg-12 text-center">
-						Copyright &copy; Bluelime Learning 2018 
+						Copyright &copy; Bluelime Learning 2021
 					</div>
 				</div>
 			</footer>
