Displaying data from database.

--- a/Projects/2. Django/1. To Do List/ToDoList_APP/templates/ToDoList_APP/index.html
+++ b/Projects/2. Django/1. To Do List/ToDoList_APP/templates/ToDoList_APP/index.html
@@ -51,7 +51,10 @@
 					</div>
 
 					<ul class="list-group t20">
-						<li class="list-group-item">Learn something new.</li>
+                        {% for todolist in todo_items %}
+                        <li class="list-group-item">{{ todolist.text }}</li>
+						{% endfor %}
+                        <li class="list-group-item">Learn something new.</li>
 						<li class="list-group-item todo-completed">Buy a new journal</li>
 						<li class="list-group-item">Book a dentist appointment.</li>
 					</ul>
