--- a/Projects/2. Django/1. To Do List/ToDoList_APP/templates/ToDoList_APP/index.html
+++ b/Projects/2. Django/1. To Do List/ToDoList_APP/templates/ToDoList_APP/index.html
@@ -52,11 +52,13 @@
 
 					<ul class="list-group t20">
                         {% for todolist in todo_items %}
-                        <li class="list-group-item">{{ todolist.text }}</li>
+                            {% if todolist.completed %}
+                            <li class="list-group-item todo-completed">{{ todolist.text }}</li>
+                            {% else %}
+                                <a herf="#"><li class="list-group-item">{{ todolist.text }}</li></a>
+                            {% endif %}
 						{% endfor %}
-                        <li class="list-group-item">Learn something new.</li>
-						<li class="list-group-item todo-completed">Buy a new journal</li>
-						<li class="list-group-item">Book a dentist appointment.</li>
+
 					</ul>
 				</div>
 			</div>
