--- a/Projects/2. Django/1. To Do List/ToDoList_APP/templates/ToDoList_APP/index.html
+++ b/Projects/2. Django/1. To Do List/ToDoList_APP/templates/ToDoList_APP/index.html
@@ -37,9 +37,10 @@
 						<div class="col-lg-12">
 							<div class="btn-toolbar">
 								<div class="btn-group">
+                                    <a href="{% url 'deletecompleted' %}">
 									<button type="button" class="btn btn-warning">
 										<i class="glyphicon glyphicon-trash"></i> DELETE COMPLETED
-									</button>
+                                    </button></a>
 								</div>
 								<div class="btn-group">
 									<button type="button" class="btn btn-danger">
