Creating a view to remove all items.

--- a/Projects/2. Django/1. To Do List/ToDoList_APP/templates/ToDoList_APP/index.html
+++ b/Projects/2. Django/1. To Do List/ToDoList_APP/templates/ToDoList_APP/index.html
@@ -43,9 +43,10 @@
                                     </button></a>
 								</div>
 								<div class="btn-group">
+                                    <a href="{% url 'delAll' %}">
 									<button type="button" class="btn btn-danger">
 										<i class="glyphicon glyphicon-trash"></i> DELETE ALL
-									</button>
+                                    </button></a>
 								</div>
 							</div>
 						</div>
